<resources>
    <string name="zhongkuohao">[</string>
    <string name="zhongkuohao_msg">条]</string>
    <string name="app_name">众聊</string>
    <string name="app_chat">消息</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_picture">相册</string>
    <string name="attach_take_pic">拍摄</string>
    <string name="address_book">通讯录</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="button_logout">退出登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="search_header">搜</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="connect_conflict">登录过期，请重新登录</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">开启新消息通知</string>
    <string name="notify_set">新消息设置</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="Are_logged_out">正在退出登录..</string>
    <string name="were_mentioned">[有人@我]</string>
    <string name="title_user_profile">个人资料</string>
    <string name="Days_ago">天前</string>
    <string name="An_hour_ago">小时前</string>
    <string name="just">刚刚</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="the_current_network">当前网络不可用，请检查网络设置</string>
    <string name="tel_is_not_allow_null">手机号不能为空</string>
    <string name="pwd_is_not_allow_null">密码不能为空</string>
    <string name="please_input_true_mobile">请输入正确的手机号码!</string>
    <string name="i_am">我是</string>
    <string name="press_top">点击上面的</string>
    <string name="btn_means_agree">按钮,即表示你同意</string>
    <string name="Secret_agreement">《众聊软件许可及服务协议》</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="register">用户注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="has_code">获取验证码</string>
    <string name="Two_input_password">两次输入的密码不一致，请重新输入!</string>
    <string name="Is_the_registered">正在注册...</string>
    <string name="country_code">+86</string>
    <string name="are_reset_password">正在重置...</string>
    <string name="password_reset_success">密码重置成功！</string>
    <string name="password_reset_failed">密码重置失败!</string>
    <string name="new_password_cannot_be_empty">新密码不能为空!</string>
    <string name="mobile_not_be_null">手机号不能为空</string>
    <string name="image_manager">相册</string>
    <string name="Initiate_group_chat">发起群聊</string>
    <string name="zero_group">0个群聊</string>
    <string name="group_size">个群聊</string>
    <string name="scanning">扫一扫</string>
    <string name="new_friend">新的朋友</string>
    <string name="add_friend">添加好友</string>
    <string name="me">我</string>
    <string name="countries_and_regions">国家</string>
    <string name="china">中国</string>
    <string name="you_mobile">你的手机号码</string>
    <string name="input_pwd">填写密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="login_by_mobile">登录</string>
    <string name="Verification_Code">验证码</string>
    <string name="new_password">新密码</string>
    <string name="Head_portrait">头像</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="modify_name">更改名字</string>
    <string name="send_msg">发送消息</string>
    <string name="add_to_contacts">添加到通讯录</string>
    <string name="pass_or_no_by_send">你需要发送验证申请，等对方通过</string>
    <string name="downwaiting">正在下载...</string>
    <string name="group_chat">群聊</string>
    <string name="deleting">正在删除...</string>
    <string name="Delete_failed">删除失败</string>
    <string name="change_groupName">修改群名称</string>
    <string name="change_group_desc">修改群描述</string>
    <string name="Modify_the_group_name_successful">修改群名称成功</string>
    <string name="group_groupname_dot_18">群名称不能超过18个字符</string>
    <string name="group_groupdesc_dot_100">群描述不能超过100个字符</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="Is_to_create_a_group_chat">正在创建群聊...</string>
    <string name="Failed_to_create_groups">创建群组失败!</string>
    <string name="success_to_create_groups">创建群组成功!</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="Delete_the_contact">删除联系人</string>
     <string name="update_groups_failed">更新群聊失败!</string>
    <string name="update_groups_success">更新群聊成功!</string>
    <string name="revoke_content">你撤回了一条消息</string>
    <string name="revoke_content_someone">%s撤回了一条消息</string>
    <string name="delete_group">解散群组</string>
    <string name="exit_group">退出群组</string>
    <string name="check_friend">请选择好友</string>
    <string name="check_max_members">群最大人数为1000</string>
    <string name="search">搜索</string>
    <string name="are_uploading">正在更新...</string>
    <string name="upload_failed">更新失败,code:</string>
    <string name="change_nick">修改昵称</string>
    <string name="change_appId">修改众聊号</string>
    <string name="change_personalized_signature">修改个人签名</string>
    <string name="mixin_can_not_has_chinese">众聊号不能包含中文</string>
    <string name="string_not_30">不能超过30个字符</string>
    <string name="me_qrcode">我的身份二维码</string>
    <string name="request_add_friend">请求加为好友</string>
    <string name="Already_added">已添加</string>
    <string name="accept">接受</string>
    <string name="save">保存</string>
    <string name="good_name">好名字可以让你的好朋友更容易记得你</string>
    <string name="logout_failed">退出登录失败!</string>
    <string name="check_update">检查更新</string>
    <string name="are_checking_update">正在查询更新...</string>
    <string name="has_update">有新版本</string>
    <string name="just_new_version">已经是最新版本了!</string>
    <string name="update_now">现在升级</string>
    <string name="update_later">以后再说</string>
    <string name="resetPassword">重置密码</string>
    <string name="input_bind_mobile">请输入登录手机号</string>
    <string name="loading">正在加载...</string>
    <string name="delete_sucess">删除成功!</string>
    <string name="delete_failed">删除失败!</string>
    <string name="exting_group">正在退出...</string>
    <string name="exting_group_success">退出群组成功!</string>
    <string name="exting_group_failed">退出群组失败!</string>
    <string name="joining_group">正在加入群聊...</string>
    <string name="joining_group_success">加入成功!</string>
    <string name="joining_group_failed">加入失败!</string>
    <string name="ok_xiaokuohao">确定(</string>
    <string name="xiaokuohao">)</string>
    <string name="chat_msg">聊天信息</string>
    <string name="xiaokuohao_left">(</string>
    <string name="change_groupName_failed">更新群名称失败!</string>
    <string name="are_doing">正在处理...</string>
    <string name="file">文件</string>
    <string name="no_pression">没有权限!</string>
    <string name="keep_live_setting">后台保活设置</string>
    <string name="bd_map">百度地图</string>
    <string name="gd_map">高德地图</string>
    <string name="gg_map">谷歌地图</string>
    <string name="tc_map">腾讯地图</string>
    <string name="login_cancle">登录取消</string>
    <string name="update_has">现在升级(强制更新)</string>
    <string name="forward">转发</string>
    <string name="reback">撤回</string>
    <string name="copy_success">复制成功!</string>
    <string name="copy_failed">复制失败!</string>
    <string name="please_check_contant">请选择联系人!</string>
    <string name="forword_people">确定转发给%s人吗?</string>
    <string name="forword_group">确定转发到%s个群组吗?</string>
    <string name="please_check_group">请选择群组!</string>
    <string name="forword_always">确定转发这条消息?</string>
    <string name="resend_text">重新发送这条消息吗?</string>
    <string name="stick_conversation">置顶会话</string>
    <string name="cancle_stick_conversation">取消置顶</string>
    <string name="close_app">关闭APP</string>
    <string name="exit_this_user">退出当前账号</string>
    <string name="just_15">15分钟前</string>
    <string name="just_30">30分钟前</string>
    <string name="just_1hour">1小时前</string>
    <string name="more_people">%s个联系人</string>
    <string name="sent_a_message">发来一条消息</string>
    <string name="sent_a_picture">发来一张图片</string>
    <string name="sent_a_voice">发来一段语音</string>
    <string name="sent_a_location">发来位置信息</string>
    <string name="sent_a_video">发来一个视频</string>
    <string name="sent_a_file">发来一个文件</string>
    <string name="contacts_messages">%1$s个联系人发来%2$i条消息</string>
    <string name="watch_live">进行直播</string>
    <string name="clear_history">清空聊天记录</string>
    <string name="just_delete_friend">您已被对方移除好友!</string>
     <string name="please_input_code">请输入验证码!</string>
    <string name="code_is_wrong">验证码不正确!</string>
    <string name="sending">发送中...</string>
    <string name="call_us">联系我们</string>
    <string name="wallet">钱包</string>
    <string name="attach_red">红包</string>
    <string name="attach_card">名片</string>
    <string name="red_content">众聊红包</string>
    <string name="transfer_content">众聊转账</string>
    <string name="get_red">领取红包</string>
    <string name="app_red_message">众聊红包</string>
    <string name="app_transfer_message">众聊转账</string>
    <string name="Ok_transfer">确认收款</string>
    <string name="get_transfer">待对方收款</string>
    <string name="send_card_or_no">是否发送该名片?</string>
    <string name="you">你</string>
    <string name="navigation">导航</string>
    <string name="has_no_map">您尚未安装该地图软件,请下载后再开启导航!</string>
    <string name="location_failed">定位失败!</string>
    <string name="not_delete_self">群创建者或管理者不能被移除!请取消管理员身份</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="all_members">全体成员</string>
    <string name="transfer_money_to">转账给%s</string>
    <string name="has_get_qrpay_from">已收到%s的付款!</string>
    <string name="self_card">个人名片</string>
    <string name="has_cancle_no_talk">管理员已解除全员禁言!</string>
    <string name="all_no_talk">全员禁言</string>
    <string name="search_chat_history">查询聊天内容</string>
    <string name="chat_history_notice">以下是搜索到的聊天内容</string>
    <string name="scan_qrcode_to_add_friend">扫一扫上面的二维码,加我为好友</string>
    <string name="remarke_friend">设置备注</string>
    <string name="remark_input">请输入备注</string>
    <string name="money_size">元</string>
    <string name="money_numal">0.00</string>
    <string name="words_numal">恭喜发财,大吉大利!</string>
    <string name="insert_money">塞钱进红包</string>
    <string name="red_more">红包个数</string>
    <string name="ge">个</string>
    <string name="total_money">总金额</string>
    <string name="notice_title">提示信息</string>
    <string name="group_total_people">本群共%s人</string>
    <string name="my_rp_receiver">收到的红包</string>
    <string name="total_send">共发出</string>
    <string name="rp_luck">手气最佳</string>
    <string name="zero">0</string>
    <string name="send_rp_size">发出红包</string>
    <string name="rmb">￥</string>
    <string name="pay_ment_message">添加收钱备注</string>
    <string name="pay_ment_message_hint">请输入备注信息</string>
    <string name="withdraw_money">提现金额</string>
    <string name="real_name">真实姓名:</string>
    <string name="alipay_name">支付宝账号:</string>
    <string name="please_input_alipay_name">请输入支付宝账号</string>
    <string name="please_input_real_name">请输入真实姓名</string>
    <string name="apply_withdraw">申请提现</string>
</resources>