<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/wight_grey"
    android:layout_height="match_parent">
    <include layout="@layout/layout_title_bar"></include>
    <LinearLayout
        android:background="@drawable/red_input_bg"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/withdraw_money"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            style="@style/text_black_18"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/tv_rmb"
                android:text="@string/rmb"
                style="@style/text_black_28"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/actionBarSize" />
            <EditText
                android:id="@+id/edt_money"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:hint="@string/money_numal"
                style="@style/text_black_28"
                android:layout_centerVertical="true"
                android:gravity="center|left"
                android:inputType="numberDecimal"
                android:background="@color/transparent"
                android:layout_toRightOf="@+id/tv_rmb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionBarSize" />
            <View
                android:layout_alignParentBottom="true"
                android:background="@color/divider_list"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/tv_name"
                android:text="@string/real_name"
                style="@style/text_black_18"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/actionBarSize" />
            <EditText
                android:id="@+id/edt_name"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_centerVertical="true"
                android:gravity="center|left"
                android:maxLines="1"
                style="@style/text_black_18"
                android:hint="@string/please_input_real_name"
                android:ellipsize="end"
                android:background="@color/transparent"
                android:layout_toRightOf="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionBarSize" />
            <View
                android:layout_toRightOf="@+id/tv_name"
                android:layout_alignParentBottom="true"
                android:background="@color/divider_list"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_number"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/tv_number"
                android:text="@string/alipay_name"
                style="@style/text_black_18"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/actionBarSize" />
            <EditText
                android:id="@+id/edt_number"
                android:layout_centerVertical="true"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/text_black_18"
                android:hint="@string/please_input_alipay_name"
                android:background="@color/transparent"
                android:layout_toRightOf="@+id/tv_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionBarSize" />
            <View
                android:layout_toRightOf="@+id/tv_number"
                android:layout_alignParentBottom="true"
                android:background="@color/divider_list"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_withdraw"
            android:text="@string/apply_withdraw"
            style="@style/text_white_18"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/bg_btn_green"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarSize" />
    </LinearLayout>
</LinearLayout>